--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,14 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.alphasystem.arabic</groupId>
     <artifactId>arabic-ui-support</artifactId>
+    <version>4.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>arabic-ui-support</name>
     <parent>
         <artifactId>jar</artifactId>
         <groupId>com.alphasystem.project</groupId>
         <version>3.0.0-SNAPSHOT</version>
-        <relativePath>../project/jar/pom.xml</relativePath>
+        <relativePath/>
     </parent>
     <dependencies>
         <dependency>
@@ -24,14 +25,14 @@
         </dependency>
         <dependency>
             <groupId>com.alphasystem.arabic</groupId>
-            <artifactId>morphological-analysis-model</artifactId>
+            <artifactId>morphological-analysis-simple-model</artifactId>
             <version>${morphological-analysis-model.version}</version>
         </dependency>
     </dependencies>
     <properties>
         <maven.test.skip>true</maven.test.skip>
-        <arabic-support.version>${project.version}</arabic-support.version>
-        <fx-support.version>${project.version}</fx-support.version>
+        <arabic-support.version>${project.parent.version}</arabic-support.version>
+        <fx-support.version>${project.parent.version}</fx-support.version>
         <morphological-analysis-model.version>${project.version}</morphological-analysis-model.version>
     </properties>
 </project>
