--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.alphasystem.arabic:arabic-support:3.0.0-SNAPSHOT'
-    implementation 'com.alphasystem.ui:fx-support:3.0.0-SNAPSHOT'
-    implementation 'com.alphasystem.arabic:morphological-analysis-simple-model:4.0.0-SNAPSHOT'
+    compile 'com.alphasystem.arabic:arabic-support:3.0.0-SNAPSHOT'
+    compile 'com.alphasystem.ui:fx-support:3.0.0-SNAPSHOT'
+    compile 'com.alphasystem.arabic:morphological-analysis-simple-model:4.0.0-SNAPSHOT'
 }
 
 group = 'com.alphasystem.arabic'
